Updated img tag in HTML file

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <header class="header">
       <div class="brand">
         <div>
-          <img src="/img/crown.png" width="80" />
+          <img src="img/crown.png" width="80" />
         </div>
         <h3 class="hotel-heading">Grand Hotel</h3>
       </div>
@@ -129,10 +129,10 @@
         </button>
       </div>
       <div class="about-us-image">
-        <img src="/img/about-us-img-1.jpeg" class="image image-1" />
-        <img src="/img/about-us-img-2.jpeg" class="image image-2" />
-        <img src="/img/about-us-img-3.jpeg" class="image image-3" />
-        <img src="/img/about-us-img-4.jpeg" class="image image-4" />
+        <img src="img/about-us-img-1.jpeg" class="image image-1" />
+        <img src="img/about-us-img-2.jpeg" class="image image-2" />
+        <img src="img/about-us-img-3.jpeg" class="image image-3" />
+        <img src="img/about-us-img-4.jpeg" class="image image-4" />
       </div>
     </section>
 
@@ -345,6 +345,6 @@
       </div>
     </footer>
     <!-- End of footer -->
-    <script src="/index.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
