Smooth Scrolling added to Sidebar hyperlinks

--- a/index.html
+++ b/index.html
@@ -69,22 +69,22 @@
         </div>
         <ul class="navigation-list">
           <li class="navigation-item">
-            <a href="#" class="navigation-link">Home</a>
+            <a href="#header" class="navigation-link">Home</a>
           </li>
           <li class="navigation-item">
-            <a href="#" class="navigation-link">About Us</a>
+            <a href="#about-us" class="navigation-link">About Us</a>
           </li>
           <li class="navigation-item">
-            <a href="#" class="navigation-link">Rooms</a>
+            <a href="#rooms" class="navigation-link">Rooms</a>
           </li>
           <li class="navigation-item">
             <a href="#" class="navigation-link">Events</a>
           </li>
           <li class="navigation-item">
-            <a href="#" class="navigation-link">Customers</a>
+            <a href="#customer" class="navigation-link">Customers</a>
           </li>
           <li class="navigation-item">
-            <a href="#" class="navigation-link">Contact</a>
+            <a href="#footer" class="navigation-link">Contact</a>
           </li>
         </ul>
         <div class="copyright">
@@ -95,7 +95,7 @@
     </div>
     <!-- end of navbar -->
     <!-- header -->
-    <header class="header">
+    <header class="header" id="header">
       <div class="brand">
         <div>
           <img src="img/crown.png" width="80" />
@@ -110,7 +110,7 @@
     </header>
     <!-- end of header -->
     <!-- about us  -->
-    <section class="about-us">
+    <section class="about-us" id="about-us">
       <div class="about-us-content">
         <h1 class="about-us-heading">About Us</h1>
         <div class="underline">
@@ -138,7 +138,7 @@
 
     <!-- end of about us -->
     <!-- Rooms -->
-    <section class="rooms">
+    <section class="rooms" id="rooms">
       <div class="common-header">
         <h1 class="common-heading">Rooms in Grand Hotel</h1>
         <div class="underline">
@@ -218,7 +218,7 @@
     </section>
     <!-- end of rooms -->
     <!-- Customers -->
-    <section class="customer">
+    <section class="customer" id="customer">
       <div class="common-header">
         <h1 class="common-heading">Our Customers</h1>
         <div class="underline">
@@ -262,7 +262,7 @@
     </section>
     <!-- end of Customer -->
     <!-- Footer -->
-    <footer class="footer">
+    <footer class="footer" id="footer">
       <div class="main-part">
         <div class="footer-list-wrapper">
           <h3 class="footer-heading">Grand Hotel</h3>
