--- a/index.html
+++ b/index.html
@@ -339,8 +339,10 @@
         </div>
       </div>
       <div class="creator-part">
-        <div class="copyright-text">
-          <p>Copyright &copy; 2022. Grand Hotel. All Rights Reserved</p>
+        <div>
+          <p class="copyright-text">
+            Copyright &copy; 2022. Grand Hotel. All Rights Reserved
+          </p>
         </div>
       </div>
     </footer>
